syntax = "proto3";

package glootest;

import "google/api/annotations.proto";

service TestService {
  rpc TestMethod (TestRequest) returns (TestResponse) {
    option (google.api.http) = {
          post: "/test"
          body: "str"
        };
  }
}

message TestRequest {
  string str = 1;
}

message TestResponse {
  string str = 1;
}
